# mockingtester

./: CMakeLists.txt  LICENSE  README.md
TestApp/: CMakeLists.txt
TestApp/include/testapp/: library.h
TestApp/src/: library.cpp  main.cpp
TestApp/test/: CMakeLists.txt  library_spec.cpp
TestApp/test/MockOrFake/include/SFML/: Graphics.hpp
